modernize stream collection to Java 17 Stream.toList()
Replace Collectors.toList() with Stream.toList() in ApiKeyService and
AnalyticsService. The Java 17 variant is more concise and returns an
unmodifiable list, which is appropriate for DTO responses that callers
should not mutate. Remove the now-unused Collectors imports.